--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -24,7 +24,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
         
       - name: Test with dotnet
-        run: dotnet test --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx"
+        run: dotnet test --verbosity normal --logger "trx;LogFileName=test-results.trx"
         
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action@v2
