ci: added publish lib support in nuget

--- a/ShapeSquareLib/ShapeSquareLib.csproj
+++ b/ShapeSquareLib/ShapeSquareLib.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <Authors>ifelseelif</Authors>>
+        <LangVersion>10</LangVersion>
+        <PublishReadyToRun>true</PublishReadyToRun>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <PackageId>ifelseelif.shape.lib</PackageId>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
