--- a/ShapeSquareLib/ShapeSquareLib.csproj
+++ b/ShapeSquareLib/ShapeSquareLib.csproj
@@ -1,15 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Authors>ifelseelif</Authors>>
-        <LangVersion>10</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <Authors>ifelseelif</Authors>
         <PublishReadyToRun>true</PublishReadyToRun>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <PackageId>ifelseelif.shape.lib</PackageId>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
     </PropertyGroup>
 
 </Project>
