--- a/.github/workflows/dotnet-publish-lib.yml
+++ b/.github/workflows/dotnet-publish-lib.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release /p:Version=${VERSION}
       - name: Pack
-        run: dotnet pack ./ShapeSquareLib/ShapeSquareLib.csproj --configuration Release /p:Version=${VERSION} --no-build --output .
+        run: dotnet pack --configuration Release /p:Version=${VERSION} --no-build --output .
       - name: Push
         run: dotnet nuget push ifelseelif.shape.lib.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${NUGET_APIKEY}
         env:
